k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extreme-weather-event-notifier
  labels:
    app: extreme-weather-event-notifier
    tier: backend
    environment: development
    app.kubernetes.io/name: extreme-weather-event-notifier
    app.kubernetes.io/component: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
        tier: backend
    spec:
      containers:
        - name: web
          image: registry.digitalocean.com/rso-registry/web
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          # https://kubernetes.io/docs/concepts/policy/pod-security-policy/
          # https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - all
      imagePullSecrets:
        - name: rso-registry
