k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: extreme-weather-event-notifier-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: extreme-weather-event-notifier-letsencrypt-dev
spec:
  tls:
  - hosts:
    - rso-weather.duckdns.org
    secretName: extreme-weather-event-notifier-tls
  rules:
  - host: rso-weather.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-cluster-ip
            port: 
              number: 80
